--- a/CS3103Assignment4/CS3103Assignment4.csproj
+++ b/CS3103Assignment4/CS3103Assignment4.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Channel.cs" />
+    <Compile Include="GameNet.cs" />
     <Compile Include="IGameNetAPI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
