Implement metrics collection

--- a/CS3103Assignment4/CS3103Assignment4.csproj
+++ b/CS3103Assignment4/CS3103Assignment4.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Channel.cs" />
+    <Compile Include="BaseMetricsCollector.cs" />
     <Compile Include="GameNet.cs" />
     <Compile Include="IGameNetAPI.cs" />
     <Compile Include="Program.cs" />
